--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "babel-preset-react": "^6.1.18",
     "chai": "^3.5.0",
     "chai-jquery": "^2.0.0",
+    "file-loader": "^0.11.2",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.7",
+    "url-loader": "^0.5.9",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
   },
@@ -35,10 +37,11 @@
     "lodash": "^3.10.1",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
+    "react": "^0.14.9",
+    "react-dom": "^0.14.9",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
+    "react-transition-group": "^1.2.0",
     "redux": "^3.0.4"
   }
 }
