--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "redux-simple-starter",
   "version": "1.0.0",
   "engines": {
-    "node": "8.1.4"
+    "node": "8.1.4",
+    "npm": "5.3.0"
   },
   "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
