--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
     "react-transition-group": "^1.2.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "webpack": "^1.15.0"
   }
 }
