--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "babel-preset-stage-1": "^6.1.18",
     "body-parser": "^1.17.2",
     "cookie-parser": "^1.4.3",
