--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "lodash": "^3.10.1",
+    "file-loader": "^0.10.1",
     "morgan": "^1.8.2",
     "path": "^0.12.7",
     "react": "^0.14.9",
